# Steam-Client

./: .bumpversion.toml  .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json  requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt  sitemap.xml  tox.ini
.gihub/workflows/: create_release.yaml  pypi.yaml
.github/workflows/: create_release.yaml  docs.yaml  pr_lint.yaml  pr_tox.yaml  pypi.yaml  release-please.yaml
api/: index.html
api/commands/: index.html
api/games/: index.html
api/steam/: index.html
api/users/: index.html
api/utils/: index.html
docs/: api.md  getting-started.md  index.md  usage.md
docs/api/: commands.md  games.md  index.md  library.md  steam.md  users.md  utils.md
getting-started/: index.html
search/: search_index.json
steam_client/: __init__.py  app.py  commands.py  exceptions.py  game.py  library.py  library_directory.py  library_folder.py  login_users.py  shortcut.py  shortcuts.py  steam.py  utils.py  vdf_file.py
tests/: conftest.py  test_commands.py  test_game.py  test_library.py  test_login_users.py  test_shortcut.py  test_shortcuts.py  test_steam.py  test_utils.py  test_vdf_file.py
usage/: index.html
