[build-system]
requires = ["setuptools"]

[project]
name = "steam-client"
authors = [
    {name = "William McAllister", email = "dev.garulf@gmail.com"}
]
version = "4.0.0"
description = "Steam client library for Python"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    'vdf>=3.4',
    'pycrc>=0.10.0'
]

[project.urls]
Source = "https://github.com/garulf/steam-client"

[tool.setuptools]
packages = ["steam_client"]

[tool.setuptools.package-data]
"steam_client" = ["py.typed"]

[tool.bumpversion]
current_version = "4.0.0"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""
parse = """(?x)
    (?P<major>[0-9]+)
    \\.(?P<minor>[0-9]+)
    \\.(?P<patch>[0-9]+)
    (?:
        -(?P<label>dev|rc|release)
        (?:.(?P<label_n>[0-9]+))?
    )?
"""
serialize = [
    "{major}.{minor}.{patch}-{label}.{label_n}",
    "{major}.{minor}.{patch}-{label}",
    "{major}.{minor}.{patch}",
]
tag = true
allow_dirty = false
commit = true

[tool.bumpversion.parts.label]
independent = true
optional_value = "release"
values =[
	"dev",
	"rc",
	"release",
]

[tool.bumpversion.parts.label_n]
independent = true
first_value = "0"
optional_value = "0"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
