[build-system]
requires = ["setuptools"]

[project]
name = "steam-client"
authors = [
    {name = "William McAllister", email = "dev.garulf@gmail.com"}
]
version = "4.1.0"
description = "Steam client library for Python"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    'vdf>=3.4',
    'pycrc>=0.10.0'
]

[project.urls]
Source = "https://github.com/garulf/steam-client"

[tool.setuptools]
packages = ["steam_client"]

[tool.setuptools.package-data]
"steam_client" = ["py.typed"]


